<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_close_camera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/close_camera"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_capture_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/capture_photo"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_flip_camera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/flip_camera"
        android:src="@drawable/ic_baseline_flip_camera_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/btn_capture_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_capture_image" />

</androidx.constraintlayout.widget.ConstraintLayout>